samples/_failures_safe/1761335083_105123_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33c30139.c: In function ‘main’:
./samples/SAFE/__tmp_33c30139.c:147:67: error: expected ‘)’ at end of input
  147 |         struct compression_result result = compress_data(test_data
      |                                                         ~         ^
      |                                                                   )
./samples/SAFE/__tmp_33c30139.c:147:44: error: too few arguments to function ‘compress_data’
  147 |         struct compression_result result = compress_data(test_data
      |                                            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_33c30139.c:92:27: note: declared here
   92 | struct compression_result compress_data(const uint8_t *input, size_t input_len, enum compression_type type) {
      |                           ^~~~~~~~~~~~~
./samples/SAFE/__tmp_33c30139.c:147:16: error: expected declaration or statement at end of input
  147 |         struct compression_result result = compress_data(test_data
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_33c30139.c:147:16: error: expected declaration or statement at end of input
